Implement Voice AI Agent with Gemini

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <div class="app-container">
         <!-- Sidebar -->
         <aside class="sidebar">
-            <div class="logo-container">
-                <i class="fa-solid fa-scale-balanced"></i>
-                <h1>Tan App</h1>
+            <div class="user-profile">
+                <div id="voice-status" class="voice-status"></div>
+                <button id="voice-agent-btn" class="btn-primary">
+                    <i class="fa-solid fa-microphone"></i> Asistana Sor
+                </button>
+                <img src="https://ui-avatars.com/api/?name=Avukat+Bey&background=0D8ABC&color=fff" alt="Profile">
+                <span>Av. Tan</span>
             </div>
             <nav class="nav-menu">
                 <a href="#" class="nav-item active" data-view="dashboard">
